--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,7 +642,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
   padding: 10px 15px;
   padding: 0.725rem 3rem;
   font-weight: 500;
-  color: #fff;
+  color: #000;
   text-transform: uppercase;
   font-size: 23px;
   
