--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,6 +1,6 @@
-{{- if .Site.Menus.main }}
+{{ partial "custom-logo" . }}
 <nav class="menu">
-	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+	{{ partial "custom-logo" . }} <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
 		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
 	</button>
 	<ul class="menu__list">
