--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
 
 .container--outer {
   margin: 25px auto;
-  box-shadow: 0 0 10px rgba(50, 50, 50, 0.17); /* Soft shadow for outer container */
+  box-shadow: none;
 }
 
 .wrapper {
