--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,19 +1,34 @@
-<nav class="menu">
-	{{ partial "custom-logo" . }} <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-	</button>
-	<ul class="menu__list">
-		{{- $currentNode := . }}
-		{{- range .Site.Menus.main }}
-		{{- if .Name }}
-		<li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
-			<a class="menu__link" href="{{ .URL }}">
-				{{ .Pre }}
-				<span class="menu__text">{{ .Name }}</span>
-				{{ .Post }}
-			</a>
-		</li>
-		{{- end }}
-		{{- end }}
-	</ul>
-</nav>
+<div class="header-top-bar">
+    <a href="/patient-support">Patient Support</a>
+    <a href="/patient-portal">Patient Portal</a>
+    <a href="tel:323-555-6463" class="call-button">Call Now! (323) 555-6463</a>
+    <a href="/book-appointment" class="appointment-button">Book An Appointment</a>
+</div>
+
+<div class="main-header">
+    {{ partial "custom-logo" . }} 
+
+    <nav class="menu">
+        <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+            <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
+            <div class="hamburger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </button>
+        <ul class="menu__list">
+            {{- $currentNode := . }}
+            {{- range .Site.Menus.main }}
+            {{- if .Name }}
+            <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
+                <a class="menu__link" href="{{ .URL }}">
+                    {{ .Pre }}
+                    <span class="menu__text">{{ .Name }}</span>
+                    {{ .Post }} </a>
+            </li>
+            {{- end }}
+            {{- end }}
+        </ul>
+    </nav>
+</div>
