--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,3 +1,4 @@
+<!-- layouts/partials/menu.html -->
 <div class="header-top-bar">
     <a href="/patient-support">Patient Support</a>
     <a href="/patient-portal">Patient Portal</a>
