--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,6 +19,7 @@
     {{ template "_internal/twitter_cards.html" . }}
   {{- end }}
 
+  {{/* Load standard CSS files first */}}
   {{ $contactFormCss := resources.Get "css/contact-form.css" | minify }}
   <link rel="stylesheet" href="{{ $contactFormCss.RelPermalink }}" />
 
@@ -29,14 +30,27 @@
     <link rel="dns-prefetch" href="//fonts.gstatic.com" />
     <link rel="stylesheet" href="{{ $googleFontsLink }}" />
   {{- end }}
+  
+  <!-- Add these specific fonts if not already covered by googleFontsLink -->
+  <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
+
+  {{/* Load main theme CSS file */}}
   {{ $style := resources.Get "css/style.css" | resources.ExecuteAsTemplate "css/style.css" . -}}
   <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
+
+  {{/* Load other theme-specific CSS */}}
   <link rel="stylesheet" href="{{ "/css/accordion.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/all.min.css" | relURL }}" />
 
-  {{/* טעינת קובץ custom.css מהתקייה static/css בסוף כדי שיקח עדיפות */}}
+  {{/* Load our NEW custom menu CSS last to ensure it overrides everything */}}
+  {{ $customMenuCss := resources.Get "css/custom-menu.css" | minify | fingerprint }}
+  <link rel="stylesheet" href="{{ $customMenuCss.RelPermalink }}" integrity="{{ $customMenuCss.Data.Integrity }}">
+  
+  {{/* Your old custom.css from static, if still needed for other custom styles, load it before custom-menu.css */}}
   <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}" />
+
 
   {{- with .OutputFormats.Get "rss" }}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
@@ -55,8 +69,12 @@
   {{- end }}
 </head>
 <body class="body">
+  {{/* REPLACE OLD HEADER PARTIAL WITH OUR NEW CUSTOM HEADER */}}
+  {{ partial "custom-header.html" . }}
+  
   <div class="container container--outer">
-    {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
+    {{/* The header block is now handled by custom-header.html, so remove this unless it's for another purpose */}}
+    {{/* {{ block "header" . }}{{ partial "header.html" . }}{{ end }} */}} 
     <div class="wrapper flex">
       <div class="primary">
         {{ block "main" . }}
@@ -76,7 +94,14 @@
     {{ block "footer" . }}{{ partial "footer.html" . }}{{ end }}
   </div>
 
-  <script async defer src="{{ "js/menu.js" | relURL }}"></script>
+  {{/* Remove the old menu.js script load if it's there.
+       We are loading our new custom-menu.js with defer. */}}
+  {{/* <script async defer src="{{ "js/menu.js" | relURL }}"></script> */}}
+
+  {{/* Load our NEW custom menu JavaScript last, with defer */}}
+  {{ $customMenuJs := resources.Get "js/custom-menu.js" | minify | fingerprint }}
+  <script src="{{ $customMenuJs.RelPermalink }}" defer integrity="{{ $customMenuJs.Data.Integrity }}"></script>
+
   {{ range .Site.Params.customJS }}
     <script src="{{ . | relURL }}"></script>
   {{ end }}
