--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,12 +1,13 @@
 {{ define "main" }}
 <main class="homepage">
-  
-    {{ with .Content }}
-    <section class="home-content">
-        <div class="content main__content">
-            {{ . | safeHTML }}
-        </div>
-    </section>
-    {{ end }}
+    {{ partial "hero-section.html" . }}
+  
+    {{ with .Content }}
+    <section class="home-content">
+        <div class="content main__content">
+            {{ . | safeHTML }}
+        </div>
+    </section>
+    {{ end }}
 </main>
 {{ end }}
