--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -1,8 +1,8 @@
 <!-- layouts/partials/custom-header.html -->
 <header class="custom-site-header">
     <div class="custom-top-bar">
-                       <a href="tel:323-555-6463" class="custom-call-button">Call Now! (323) 555-6463</a>
-        <a href="/book-appointment" class="custom-appointment-button">Book An Appointment</a>
+                       <a href="tel:054-7509962" class="custom-call-button"> התקשרו 054-7509962</a>
+        <a href="/pages/contact class="custom-appointment-button">צרו קשר </a>
     </div>
 
     <div class="custom-main-header">
