--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -2,7 +2,7 @@
 <header class="custom-site-header">
     <div class="custom-top-bar">
                        <a href="tel:054-7509962" class="custom-call-button"> התקשרו 054-7509962</a>
-        <a href="/pages/contact class="custom-appointment-button">צרו קשר </a>
+        <a href="/pages/contact" class="custom-appointment-button">צרו קשר </a>
     </div>
 
     <div class="custom-main-header">
