--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -1,8 +1,8 @@
 <!-- layouts/partials/custom-header.html -->
 <header class="custom-site-header">
     <div class="custom-top-bar">
-                       <a href="tel:054-7509962" class="custom-call-button"> התקשרו 054-7509962</a>
-        <a href="/pages/contact" class="custom-appointment-button">צרו קשר </a>
+                       <a href="tel:054-7509962" class="custom-call-button"> התקשרו אליי </a>
+        <a href="/contact/" class="custom-appointment-button">שלחו הודעה </a>
     </div>
 
     <div class="custom-main-header">
